include/openswmm/legacy/engine/openswmm_solver.h

/*!
 * \struct swmm_SubcatchStats
 * \brief Cumulative subcatchment statistics.
 */
typedef struct
{
    double precip;           /*!< Total precipitation (depth) */
    double runon;            /*!< Total runon (volume) */
    double evap;             /*!< Total evaporation (volume) */
    double infil;            /*!< Total infiltration (volume) */
    double runoff;           /*!< Total runoff (volume) */
    double maxFlow;          /*!< Maximum runoff rate (flowrate) */
    double impervRunoff;     /*!< Impervious area runoff (volume) */
    double pervRunoff;       /*!< Pervious area runoff (volume) */
} swmm_SubcatchStats;
/*!
 * \struct swmm_NodeStats
 * \brief Cumulative node statistics.
 */
typedef struct
{
    double avgDepth;             /*!< Average node depth */
    double maxDepth;             /*!< Maximum node depth */
    double maxDepthDate;         /*!< Date/time of maximum depth */
    double maxRptDepth;          /*!< Maximum depth from reporting step */
    double volFlooded;           /*!< Total volume flooded */
    double timeFlooded;          /*!< Total time flooded (hours) */
    double timeSurcharged;       /*!< Total time surcharged (hours) */
    double timeCourantCritical;  /*!< Total time Courant-critical (hours) */
    double totLatFlow;           /*!< Total lateral inflow volume */
    double maxLatFlow;           /*!< Maximum lateral inflow rate */
    double maxInflow;            /*!< Maximum total inflow rate */
    double maxOverflow;          /*!< Maximum flooding rate */
    double maxPondedVol;         /*!< Maximum ponded volume */
    double maxInflowDate;        /*!< Date/time of maximum inflow */
    double maxOverflowDate;      /*!< Date/time of maximum overflow */
} swmm_NodeStats;
/*!
 * \struct swmm_StorageStats
 * \brief Cumulative storage node statistics.
 */
typedef struct
{
    double initVol;      /*!< Initial volume */
    double avgVol;       /*!< Average volume */
    double maxVol;       /*!< Maximum volume */
    double maxFlow;      /*!< Maximum total inflow rate */
    double evapLosses;   /*!< Evaporation losses (volume) */
    double exfilLosses;  /*!< Exfiltration losses (volume) */
    double maxVolDate;   /*!< Date/time of maximum volume */
} swmm_StorageStats;
/*!
 * \struct swmm_OutfallStats
 * \brief Cumulative outfall node statistics.
 */
typedef struct
{
    double  avgFlow;      /*!< Average flow rate */
    double  maxFlow;      /*!< Maximum flow rate */
    double *totalLoad;    /*!< Array of pollutant loads (caller allocates) */
    int     totalPeriods; /*!< Number of simulation periods */
} swmm_OutfallStats;
/*!
 * \struct swmm_LinkStats
 * \brief Cumulative link statistics.
 */
typedef struct
{
    double maxFlow;              /*!< Maximum flow rate */
    double maxFlowDate;          /*!< Date/time of maximum flow */
    double maxVeloc;             /*!< Maximum velocity */
    double maxDepth;             /*!< Maximum depth */
    double timeNormalFlow;       /*!< Time in normal flow (hours) */
    double timeInletControl;     /*!< Time under inlet control (hours) */
    double timeSurcharged;       /*!< Time surcharged (hours) */
    double timeFullUpstream;     /*!< Time full at upstream (hours) */
    double timeFullDnstream;     /*!< Time full at downstream (hours) */
    double timeFullFlow;         /*!< Time at full flow (hours) */
    double timeCapacityLimited;  /*!< Time capacity-limited (hours) */
    double timeInFlowClass[SWMM_MAX_FLOW_CLASSES]; /*!< Time in each flow class */
    double timeCourantCritical;  /*!< Time Courant-critical (hours) */
    long   flowTurns;            /*!< Number of flow reversals */
    int    flowTurnSign;         /*!< Current flow direction sign */
} swmm_LinkStats;
/*!
 * \struct swmm_PumpStats
 * \brief Cumulative pump statistics.
 */
typedef struct
{
    double utilized;     /*!< Fraction of time utilized */
    double minFlow;      /*!< Minimum flow rate */
    double avgFlow;      /*!< Average flow rate */
    double maxFlow;      /*!< Maximum flow rate */
    double volume;       /*!< Total pumping volume */
    double energy;       /*!< Total energy demand */
    double offCurveLow;  /*!< Off-curve depth below on-depth */
    double offCurveHigh; /*!< Off-curve depth above on-depth */
    int    startUps;     /*!< Number of pump start-ups */
    int    totalPeriods; /*!< Total simulation periods */
} swmm_PumpStats;
/*!
 * \struct swmm_RoutingTotals
 * \brief System-level flow routing mass balance totals (all in ft3 or m3).
 */
typedef struct
{
    double dwInflow;     /*!< Dry weather inflow volume */
    double wwInflow;     /*!< Wet weather inflow volume */
    double gwInflow;     /*!< Groundwater inflow volume */
    double iiInflow;     /*!< RDII inflow volume */
    double exInflow;     /*!< Direct/external inflow volume */
    double flooding;     /*!< Internal flooding volume */
    double outflow;      /*!< External outflow volume */
    double evapLoss;     /*!< Evaporation loss volume */
    double seepLoss;     /*!< Seepage loss volume */
    double reacted;      /*!< Reaction losses (quality) */
    double initStorage;  /*!< Initial storage volume */
    double finalStorage; /*!< Final storage volume */
    double pctError;     /*!< Continuity error (%) */
} swmm_RoutingTotals;
/*!
 * \struct swmm_RunoffTotals
 * \brief System-level surface runoff mass balance totals.
 */
typedef struct
{
    double rainfall;       /*!< Total rainfall (depth) */
    double evap;           /*!< Evaporation loss (volume) */
    double infil;          /*!< Infiltration loss (volume) */
    double runoff;         /*!< Runoff volume */
    double drains;         /*!< LID drain volume */
    double runon;          /*!< Runon from outfalls (volume) */
    double initStorage;    /*!< Initial surface storage (depth) */
    double finalStorage;   /*!< Final surface storage (depth) */
    double initSnowCover;  /*!< Initial snow cover (depth) */
    double finalSnowCover; /*!< Final snow cover (depth) */
    double snowRemoved;    /*!< Snow removal (depth) */
    double pctError;       /*!< Continuity error (%) */
} swmm_RunoffTotals;
/* ====================================================================
 *  Statistics and mass balance API functions
 *
 *  Call these after swmm_end() but before swmm_close().
 * ==================================================================== */

/*!
 * \brief Get cumulative subcatchment statistics.
 * \param[in]  index  Subcatchment index
 * \param[out] stats  Pointer to swmm_SubcatchStats to fill
 * \return Error code (0 = success)
 */
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getSubcatchStats(int index, swmm_SubcatchStats *stats);
/*!
 * \brief Get cumulative node statistics.
 * \param[in]  index  Node index
 * \param[out] stats  Pointer to swmm_NodeStats to fill
 * \return Error code (0 = success)
 */
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getNodeStats(int index, swmm_NodeStats *stats);
/*!
 * \brief Get cumulative storage node statistics.
 * \param[in]  index  Node index (must be a STORAGE node)
 * \param[out] stats  Pointer to swmm_StorageStats to fill
 * \return Error code (0 = success)
 */
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getStorageStats(int index, swmm_StorageStats *stats);
/*!
 * \brief Get cumulative outfall node statistics.
 * \param[in]  index  Node index (must be an OUTFALL node)
 * \param[out] stats  Pointer to swmm_OutfallStats to fill
 * \return Error code (0 = success)
 * \note  Caller must pre-allocate stats->totalLoad with Nobjects[POLLUT] doubles.
 */
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getOutfallStats(int index, swmm_OutfallStats *stats);
/*!
 * \brief Get cumulative link statistics.
 * \param[in]  index  Link index
 * \param[out] stats  Pointer to swmm_LinkStats to fill
 * \return Error code (0 = success)
 */
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getLinkStats(int index, swmm_LinkStats *stats);
/*!
 * \brief Get cumulative pump statistics.
 * \param[in]  index  Link index (must be a PUMP link)
 * \param[out] stats  Pointer to swmm_PumpStats to fill
 * \return Error code (0 = success)
 */
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getPumpStats(int index, swmm_PumpStats *stats);
/*!
 * \brief Get system-level flow routing mass balance totals.
 * \param[out] totals  Pointer to swmm_RoutingTotals to fill
 * \return Error code (0 = success)
 */
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getSystemRoutingTotals(swmm_RoutingTotals *totals);
/*!
 * \brief Get system-level surface runoff mass balance totals.
 * \param[out] totals  Pointer to swmm_RunoffTotals to fill
 * \return Error code (0 = success)
 */
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getSystemRunoffTotals(swmm_RunoffTotals *totals);