python/openswmm/legacy/engine/solver.pxd


    ctypedef struct swmm_LinkStats:
        double maxFlow
        double maxFlowDate
        double maxVeloc
        double maxDepth
        double timeNormalFlow
        double timeInletControl
        double timeSurcharged
        double timeFullUpstream
        double timeFullDnstream
        double timeFullFlow
        double timeCapacityLimited
        double timeInFlowClass[7]
        double timeCourantCritical
        long flowTurns
        int flowTurnSign

    ctypedef struct swmm_PumpStats:
        double utilized
        double minFlow
        double avgFlow
        double maxFlow
        double volume
        double energy
        double offCurveLow
        double offCurveHigh
        int startUps
        int totalPeriods

    ctypedef struct swmm_RoutingTotals:
        double dwInflow
        double wwInflow
        double gwInflow
        double iiInflow
        double exInflow
        double flooding
        double outflow
        double evapLoss
        double seepLoss
        double reacted
        double initStorage
        double finalStorage
        double pctError

    ctypedef struct swmm_RunoffTotals:
        double rainfall
        double evap
        double infil
        double runoff
        double drains
        double runon
        double initStorage
        double finalStorage
        double initSnowCover
        double finalSnowCover
        double snowRemoved
        double pctError

    # --- Statistics and mass balance API functions ---

    cdef int swmm_getSubcatchStats(int index, swmm_SubcatchStats *stats)
    cdef int swmm_getNodeStats(int index, swmm_NodeStats *stats)
    cdef int swmm_getStorageStats(int index, swmm_StorageStats *stats)
    cdef int swmm_getOutfallStats(int index, swmm_OutfallStats *stats)
    cdef int swmm_getLinkStats(int index, swmm_LinkStats *stats)
    cdef int swmm_getPumpStats(int index, swmm_PumpStats *stats)
    cdef int swmm_getSystemRoutingTotals(swmm_RoutingTotals *totals)
    cdef int swmm_getSystemRunoffTotals(swmm_RunoffTotals *totals)